tests/algorithms/x/Java/data_structures/binary_tree/treap.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden199_treap850327005/001/Main.java:40: error: incompatible types: BigInteger cannot be converted to String
            SplitResult res_1 = node_lefts[(int)(((java.math.BigInteger)(root)).longValue())].split(java.util.regex.Pattern.quote(value));
                                                                                                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden199_treap850327005/001/Main.java:44: error: incompatible types: BigInteger cannot be converted to String
        SplitResult res_3 = node_rights[(int)(((java.math.BigInteger)(root)).longValue())].split(java.util.regex.Pattern.quote(value));
                                                                                                                               ^
/tmp/TestJavaTranspiler_Algorithms_Golden199_treap850327005/001/Main.java:66: error: incompatible types: BigInteger cannot be converted to String
        SplitResult res_5 = root.split(java.util.regex.Pattern.quote(value));
                                                                     ^
/tmp/TestJavaTranspiler_Algorithms_Golden199_treap850327005/001/Main.java:71: error: incompatible types: BigInteger cannot be converted to String
        SplitResult res1 = root.split(java.util.regex.Pattern.quote(value.subtract(java.math.BigInteger.valueOf(1))));
                                                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden199_treap850327005/001/Main.java:72: error: incompatible types: BigInteger cannot be converted to String
        SplitResult res2_1 = res1.right.split(java.util.regex.Pattern.quote(value));
                                                                            ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
5 errors
